--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,31 +1,105 @@
 body {
-  background: #DDD;
-  font-family: Verdana;
-  font-size: 13px;
-  line-height: 18px;
+  background-color: #FFFFFF;
+  color: #9BC959;
 }
 
-#body_content, #side_body_content {
-  margin-top: 50px;
-  width: 45%;
-  background: white;
-  color: #333;
-  padding: 20px;
+body, p, ol, ul, td {
+  font-family: tahoma, verdana, arial, helvetica, sans-serif;
+  font-size:   14px;
+}
+
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px;
+}
+
+a {
+  color: #9BC959;
+  text-decoration: none;
+}
+a:visited {
+  color: #9BC959;
+}
+a:hover {
+  color: #9BC959;
+  font-weight: bold;
+  text-decoration: none;
+}
+a img {
+  border: 0;
+}
+
+#logo {
+  background-color: #DEDEDE;
+  text-align: center;
+  font-size: 80px;
+  color: #9BC959;
+  font-weight: bold;
+}
+
+#logo .grid_12 {
+  padding-top: 35px;
+  font-family: tahoma, verdana, arial, helvetica, sans-serif;
+}
+
+footer {
+  height: 30px;
+  padding: 8px;
+  background-color: #9BC959;
+  color: #FFFFFF;
+}
+
+footer p {
+  text-align: center;
+  font-weight: bold;
+  position: relative;
+  top: 6px;
+}
+
+footer p a {
+  color: #9BC959;
+}
+
+footer p a:hover {
+  text-decoration: underline;
+}
+
+#menu a {
+  color: #FFFFFF;
 }
 
 #menu ul {
   list-style: none;
-  padding: 0px;
+  list-style-type: none;
+  background-color: #9BC959;
+  padding: 10px 0;
   li {
-    float: left;
-    margin-right: 10px;
+    margin-left: 10px;
     a {
-      display: block;
-      padding: 5px 10px;
-      text-decoration: none;
+      color: #FFFFFF;
     }
     &.selected a, a:hover {
-      background: #CCC;
+      font-weight: bold;
+      text-decoration: none;
     }
   }
+}
+
+#body_content, #side_body_content {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #555;
+}
+
+#body_content, #side_body_content table {
+  margin-bottom: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.bold {
+  font-weight: bold;
 }
