--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -4,7 +4,11 @@
   end
 -%>
 <li<%= ['', css].compact.join(' ').gsub(/\ *$/, '').html_safe %>>
-<%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%>
+<% if css =~ /selected/ %>
+  <span class="bold"><%= menu_branch.title %></span>
+<% else %>
+  <%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%>
+<% end %>
   <% if ( (children = menu_branch.children unless hide_children).present? &&
           (!local_assigns[:menu_levels] || menu_branch.ancestors.length < local_assigns[:menu_levels]) ) -%>
     <ul class='clearfix'>
