--- a/app/views/refinery/_menu.html.erb
+++ b/app/views/refinery/_menu.html.erb
@@ -6,6 +6,7 @@
     css = [(css || 'menu clearfix')].flatten.join(' ')
     hide_children = Refinery::Core.menu_hide_children if hide_children.nil?
 -%>
+<% p roots %>
 <nav id='<%= dom_id %>' class='<%= css %>'>
   <ul>
     <%= render :partial => '/refinery/menu_branch', :collection => roots,
