menu - show sub-menu when going deeper

--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -9,6 +9,7 @@
 <% else %>
   <%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%>
 <% end %>
+<% if submenu_include_page?(menu_branch, @page) %>
   <% if ( (children = menu_branch.children unless hide_children).present? &&
           (!local_assigns[:menu_levels] || menu_branch.ancestors.length < local_assigns[:menu_levels]) ) -%>
     <ul class='clearfix'>
@@ -20,4 +21,5 @@
                  } -%>
     </ul>
   <% end -%>
+<% end %>
 </li>
